# audio-prod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
UIFiles/: audioController.ui  audioControllerWidget.ui  audioDataWidget.ui  audioPlayer.ui  audioPlayerWidget.ui  mainWindow.ui  waveForm.ui  waveFormWidget.ui
headers/: audioController.h  audioControllerWidget.h  audioDataWidget.h  audioEngine.h  audioPlayer.h  audioPlayerWidget.h  commonDefines.h  mainWindow.h  syncedAudioQueue.h  waveForm.h  waveFormWidget.h
internalDocs/: dev.md
internalDocs/progress/: 2025-09-22.md  2025-09-23.md  2025-09-24.md  2025-09-28.md  2025-09-29.md  2025-09-30.md  2025-10-02.md  2025-10-04.md  2025-10-08.md  2025-10-28.md  2025-11-01.md
internalDocs/requirements/: appRequirements.md
resources/: resources.qrc
sources/: audioController.cpp  audioControllerWidget.cpp  audioDataWidget.cpp  audioEngine.cpp  audioPlayer.cpp  audioPlayerWidget.cpp  errorHandler.cpp  main.cpp  mainWindow.cpp  syncedAudioQueue.cpp  utils.cpp  waveForm.cpp  waveFormWidget.cpp
src/: CMakeLists.txt
src/app/: .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp
src/app/ui/: Main.qml
src/components/: CMakeLists.txt
src/core/: CMakeLists.txt  commands.h
src/core/audio/: CMakeLists.txt
src/core/audio/include/: abstractAudioSource.h  audioController.h  audioEngine.h  audioFileSource.h  toneGenerator.h  toneSource.h
src/core/audio/src/: audioController.cpp  audioEngine.cpp  audioFileSource.cpp  toneGenerator.cpp  toneSource.cpp
src/core/engine/: CMakeLists.txt  audioController.cpp  audioController.h  audioEngine.cpp  audioEngine.h
src/core/engine/include/: audioController.h  audioEngine.h
src/core/engine/src/: audioController.cpp  audioEngine.cpp
src/utils/: CMakeLists.txt  commands.h  common.h  syncedQueue.cpp
src/utils/include/: abstractAudioSource.h  commands.h  common.h  syncedQueue.h
tests/: CMakeLists.txt  firstTest.cpp
tests/unit/: audioFilesTest.cpp  initEngineTests.cpp  initTest.cpp  runTests.cpp  toneTest.cpp
uiFiles/: audioControllerWidget.ui  audioDataWidget.ui  audioPlayerWidget.ui  mainWindow.ui  waveFormWidget.ui
utils/: commands.h  commonDefines.h  errorHandler.h  syncedQueue.h  utils.cpp  utils.h
